Search and filter function successful, and update openapi
